Upgrade java, gradle, jdk and spring